# meteor

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  CameraData.h  Component.cpp  Component.h  Game.cpp  Game.h  Main.cpp  PlatformDefines.h  README.md  RenderPhase.h  Sound.cpp  Sound.h  ThreadMessages.h  main.conf
Content/: log_file.txt
Content/fonts/bitmap/: GatsbyFLF.fnt
Content/meshes/: dude.fbx
Content/shaders/dx/: alpha_test.cso  default_pixel.cso  default_pixel.psh  default_vertex.cso  default_vertex.vsh  particle_alpha_test.cso
Content/shaders/gl/: alpha_test.frag  default_frag.frag  default_vertex.vert  particle.vert
Content/sounds/: Hit2.wav.asd  Hit4.wav.asd
Meteor/: Camera.cpp  Camera.h  CameraData.h  Component.h  ComponentRegistry.h  Game.cpp  Game.h  GlobalInfo.h  Main.cpp  Main.h  Message.h  Meteor.aps  Meteor.rc  PlatformDefines.h  Sound.cpp  Sound.h  ThreadMessages.h  WindowsWindow.cpp  main.conf  resource.h
Meteor/docs/: license-fmodex.txt
Meteor/dx/: DXEmitter.cpp  DXEmitter.h  DXInfo.h  DXModel.cpp  DXModel.h  DXPrimitives.cpp  DXPrimitives.h  DXRenderer.cpp  DXRenderer.h  DXShader.cpp  DXShader.h  DXTexture.cpp  DXTexture.h  DXUtils.cpp  DXUtils.h  ShaderConstant.h
Meteor/gl/: GLEmitter.cpp  GLEmitter.h  GLFont.cpp  GLFont.h  GLGUI.cpp  GLGUI.h  GLInfo.h  GLMesh.cpp  GLMesh.h  GLModel.cpp  GLModel.h  GLPrimitives.cpp  GLPrimitives.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLUniformBuffer.cpp  GLUniformBuffer.h  Terrain.cpp
Meteor/maps/: cliffside.map  cliffside.spa
Meteor/shaders/dx/: particle_pixel.cso  particle_pixel.psh  particle_vertex.vsh
Meteor/shaders/gl/: particle.frag
Meteor/sounds/: Hit.wav.asd
Meteor/utilities/: Alignment.h  Allocator.cpp  Allocator.h  Assert.h  AutoArray.h  BString.cpp  BString.h  Benaphore.cpp  Benaphore.h  BitManipulation.cpp  BitManipulation.h  Collision.cpp  Collision.h  Color.cpp  Color.h  Conversion.cpp  Conversion.h  DataTypes.h  DenseArray.h  DeviceGUID.h  Endianness.cpp  Endianness.h  FileHandling.cpp  FileHandling.h  FileStream.cpp  FileStream.h  GLMath.cpp  GLMath.h  GLUtils.cpp  GLUtils.h  HandleManager.h  HashTable.h  Input.cpp  Input.h  IntegerHashTable.cpp  IntegerHashTable.h  Interlocked.h  Interpolation.cpp  Interpolation.h  LinkedList.h  (+44 more)
Meteor/utilities/collections/: Alignment.h  AutoArray.h  DenseArray.h  HandleManager.cpp  HandleManager.h  HashMap.h  HashTable.cpp  IntegerHashTable.cpp  LinkedQueue.h  Queue.h
Meteor/utilities/concurrent/: Benaphore.cpp  MemoryFences.h  Mutex.cpp  Semaphore.h
Meteor/utilities/input/: Input.cpp  Input.h  InternalGlobals.h  LinuxEvDevUtils.cpp  LinuxEvDevUtils.h  LinuxInput.cpp  WindowsInput.cpp  WindowsInput.h
Meteor/windows/: WindowsWindow.cpp  WindowsWindow.h
Meteor/x11/: X11Window.cpp  X11Window.h  XPM.cpp  XPM.h  XPMNamedColor.h
data/shaders/dx/: alpha_test.psh
data/shaders/gl/: particle_alpha_test.frag
data/sounds/: Blast.wav.asd  Blast7.wav.asd
dx/: DXInfo.h  DXModel.cpp  DXModel.h  DXPrimitives.cpp  DXPrimitives.h  DXRenderer.cpp  DXRenderer.h  DXShader.cpp  DXShader.h  DXTexture.cpp  DXTexture.h  DXUtils.cpp  DXUtils.h  ShaderConstant.cpp  ShaderConstant.h
gl/: GLEmitter.cpp  GLEmitter.h  GLFont.cpp  GLGUI.cpp  GLGUI.h  GLInfo.h  GLMesh.h  GLModel.cpp  GLModel.h  GLPrimitives.cpp  GLPrimitives.h  GLRenderer.cpp  GLRenderer.h  GLSampler.cpp  GLSampler.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLUniformBuffer.h  Terrain.cpp  Terrain.h  gl_core_3_3.c  gl_core_3_3.h
meshes/: Fiona.mtl  unfolding.fbx
shaders/dx/: particle_alpha_test.psh  particle_vertex.cso
sounds/: Hit3.wav.asd
utilities/: CharTypes.h  Color.cpp  DataTypes.h  DeviceGUID.h  Endianness.cpp  FileHandling.cpp  FileStream.h  GLMath.cpp  GLMath.h  GLUtils.cpp  GLUtils.h  Hashing.cpp  Hashing.h  Interpolation.cpp  Logging.cpp  Logging.h  Macros.h  Maths.cpp  Maths.h  MeshLoading.cpp  MeshLoading.h  Noise.cpp  Noise.h  Parsing.h  RandomDistribution.cpp  RandomDistribution.h  Sorting.h  String.cpp  String.h  Textblock.cpp  Textblock.h  Timer.cpp  Timer.h  Unicode.cpp  Unicode.h  XLibUtils.h  stb_dxt.h
utilities/collections/: Allocator.h  AutoArray.h  HandleManager.cpp
utilities/concurrent/: LinkedQueue.h  Mutex.cpp  Mutex.h
utilities/input/: Input.cpp  Input.h  LinuxEvDevUtils.cpp  LinuxInput.cpp  LinuxInput.h  WindowsInput.cpp  WindowsInput.h
windows/: WindowsWindow.cpp  WindowsWindow.h  wgl_extensions.c  wgl_extensions.h
x11/: X11Window.cpp  X11Window.h  XPM.cpp  glx_extensions.c  glx_extensions.h
